# mccfr-poker-engine

./: .gitignore  README.md
engine/: CMakeLists.txt  README.md  run.sh  tests.sh
engine/experiments/: optimal_ehs_iterations.cpp
engine/include/: action.h  board_aware_bot.h  bot.h  cards.h  decision_state.h  dumb_bot.h  engine.h  evaluation.h  example_lookups.h  hand_eval.h  info_set.h  infoset_key.h  mccfr.h  optimal_ehs_iterations.h  training_config.h  utils.h
engine/io/: binary_stdio.cpp  reader.h  writer.h
engine/src/: decision_state.cpp  engine.cpp  evalutaion.cpp  example_lookups.cpp  info_set.cpp  infoset_key.cpp  main.cpp  mccfr.cpp
engine/src/bots/: dumb_bot.cpp
engine/tests/: test_evaluation.cpp
